--- a/server/pom.xml
+++ b/server/pom.xml
@@ -35,6 +35,11 @@
             <artifactId>h2</artifactId>
             <version>1.4.194</version>
         </dependency>
+        <dependency>
+            <groupId>de.svenkubiak</groupId>
+            <artifactId>jBCrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
     </dependencies>
 
     <build>
