--- a/server/pom.xml
+++ b/server/pom.xml
@@ -40,6 +40,11 @@
             <artifactId>jBCrypt</artifactId>
             <version>0.4</version>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.4</version>
+        </dependency>
     </dependencies>
 
     <build>
